track previous incorrect guess. Fix logic issues on when to continue. Convert correct answers from in stimuli from a string to an array of strings.

--- a/docs/experiment/anagramer/experiment.css
+++ b/docs/experiment/anagramer/experiment.css
@@ -12,3 +12,8 @@
 .option {
     font-size: 24px;
 }
+
+.incorrect {
+  border-image: linear-gradient(to right, orange , yellow, green, cyan, blue, violet) 1;
+  border-style: solid;
+}
